--- a/app/src/main/res/values-uk/help.xml
+++ b/app/src/main/res/values-uk/help.xml
@@ -4,18 +4,18 @@
         <h1>Створити гаманець - Новий</h1>
         <p>Якщо вам потрібна нова адреса Monero!</p>
         <p>Введіть унікальне і\'мя та пароль гаманця.
-        Пароль використовується для захисту даних вашого гаманця на Android пристрої.
+        Пароль використовується для захисту даних вашого гаманця на Android пристрої.
         Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.
         </p>
         <h2>Запишіть вашу мнемонічну фразу!</h2>
         <p>Наступний екран буде містити вашу \"мнемонічну фразу\", що складається з 25 слів.
-        Це єдині дані, які необхідні для відновлення вашого гаманця в
-        майбутньому і отримання доступу до ваших коштів.
-        Підтримувати її безпеку і конфіденційність дуже важливо, так як це
-        гарантує, що ніхто не зможе отримати доступ до ваших коштів!</p>
+        Це єдині дані, які необхідні для відновлення вашого гаманця в
+        майбутньому і отримання доступу до ваших коштів.
+        Підтримувати її безпеку і конфіденційність дуже важливо, так як це
+        гарантує, що ніхто не зможе отримати доступ до ваших коштів!</p>
         <p>Якщо ви втратите пароль від вашого гаманця, ви зможете відновити його, використовуючи мнемонічну фразу.</p>
         <p>Спосіб відновлення мнемонічної фрази відсутній. У разі її втрати - будуть втрачені
-        і всі ваші кошти! Також ви ніколи не зможете змінити мнемонічну фразу, і якщо вона
+        і всі ваші кошти! Також ви ніколи не зможете змінити мнемонічну фразу, і якщо вона
         буде вкрадена або розкрита будь-яким іншим чином, то вам доведеться перенести ваші кошти
         в новий гаманець (з новою мнемонічною фразою). Тому рекомендується створити резервну копію
         вашої мнемонічною фрази, записавши її, і зберігати декілька копій в безпечному місці.</p>
@@ -61,7 +61,7 @@
         не боячись втратити свої Monero. Monero відправлятимуть на ваш гаманець, використовуючи саме цю адресу.
         <h2>Мнемонічна фраза</h2>
         Це єдині дані, які необхідні для відновлення вашого гаманця в майбутньому, і отримання
-        доступу до ваших коштів. Підтримувати її безпеку і конфіденційність дуже важливо,
+        доступу до ваших коштів. Підтримувати її безпеку і конфіденційність дуже важливо,
         так як це гарантує, що <em>ніхто</em> не зможе отримати доступ до ваших коштів!
         Якщо ви не записали цю фразу, і не зберегли її в безпечному місці, зробіть це негайно!
         <h2>Файли відновлення паролю гаманця</h2>
@@ -207,10 +207,10 @@
         <p>Ваші секретні ключі ніколи не покинуть пристрій Ledger. Вам потрібен
          пристрій кожен раз, коли ви хочете отримати доступ до свого гаманця.</p>
         <p>Необхідно ввести унікальні і&apos:мя і пароль гаманця. Пароль використовується для захисту даних вашого
-         гаманця на пристрої. Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.</p>
+        гаманця на пристрої. Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.</p>
         <p>Якщо вам відомий номер блоку першої транзакції, який використовувався з цією адресою, слід
-         ввести його в поле \"Відновити висоту\". Ви також можете використовувати дату в форматі YYYY-MM-DD.
-         Якщо ви не впевнені, введіть приблизну дату/висоту блоку <em>до</em> того, як ви вперше використали цей гаманець.</p>
+        ввести його в поле \"Відновити висоту\". Ви також можете використовувати дату в форматі YYYY-MM-DD.
+        Якщо ви не впевнені, введіть приблизну дату/висоту блоку <em>до</em> того, як ви вперше використали цей гаманець.</p>
     ]]></string>
 
     <string name="help_wallet"><![CDATA[
@@ -229,7 +229,7 @@
         <p><b>Допоможіть! Баланс мого гаманця кудись зник або не підтверджений!</b><br/>
         Не панікуйте! Якщо ви відправляєте кошти з вашого гаманця, ваш баланс тимчасово залишається
         непідтвердженим. Це відбувається в результаті процесу обміну Monero в блокчейні, і роботи механізму
-        решти. Подробиці обміну можна дізнатися за посиланням:
+        решти. Подробиці обміну можна дізнатися за посиланням:
         https://getmonero.org/resources/moneropedia/change.html
         <h2>Список транзакцій</h2>
         <p>Список транзакцій, проведених з використанням цього гаманця. У гаманцях перегляду можна побачити
@@ -278,8 +278,6 @@
         Сканування зупиниться, як тільки буде знайдено 10 віддалених вузлів.</p>
     ]]></string>
 
-
-
     <string name="help_uri"><![CDATA[
         <h1>Використання плажіного посилання</h1>
         <p>Ви почали використовувати Monerujo з платіжним посиланням. Для надсилання коштів, будь ласка, виконайте найступне:</p>
@@ -292,4 +290,25 @@
     ]]></string>
 
     <string name="help_ok">Я зрозумів!</string> <!-- Note: "Got it" as in "I understand this" -->
+
+    <string name="help_nok">Nah…</string> <!-- Note: "Nah..." as in "I don't want this" -->
+    <string name="help_getorbot">Get Orbot!</string>
+    <string name="help_tor"><![CDATA[
+        <h1>Tor</h1>
+        <p>Tor, short for The Onion Router, is free and open-source software for enabling anonymous
+        communication.</p>
+        <p>Enabling Tor will route your connection through several relays and hide your IP address
+        from the node. Keep in mind this is more private but also <b>slower</b>.</p>
+        <p>In order to use Tor with Monerujo, you\'ll need Orbot installed on your phone. After
+        installing Orbot, make sure to enable it by clicking the network icon on the wallet list
+        screen.</p>
+        <p>If you have issues connecting with Tor, try to get a new Identity in the Orbot App (icon
+        on the top right).</p>
+    ]]></string>
+
+    <string name="help_tor_enable"><![CDATA[
+        <h1>Tor Node</h1>
+        <p>This is an .onion node. In order to use it, you must enable Tor mode by touching the
+        <img src="ic_network_clearnet"/> icon near the top of the Wallet List page.</p>
+    ]]></string>
 </resources>
