--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -29,28 +29,49 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp">
+
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/pbNetwork"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_alignStart="@id/ibNetwork"
+                android:layout_alignTop="@+id/ibNetwork"
+                android:layout_alignEnd="@id/ibNetwork"
+                android:layout_alignBottom="@id/ibNetwork"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:progress="100"
+                android:visibility="visible"
+                app:indicatorInset="9dp"
+                app:indicatorSize="30dp"
+                app:trackThickness="2dp" />
+
+            <ImageButton
+                android:id="@+id/ibNetwork"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:gravity="center"
+                android:padding="12dp"
+                android:src="@drawable/ic_network_clearnet" />
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="16dp"
-                android:layout_toStartOf="@+id/ibRenew">
-
-                <ProgressBar
-                    android:id="@+id/pbNode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:visibility="invisible" />
+                android:layout_height="0dp"
+                android:layout_alignTop="@+id/ibNetwork"
+                android:layout_alignBottom="@id/ibNetwork"
+                android:layout_toStartOf="@+id/ibRenew"
+                android:layout_toEndOf="@+id/ibNetwork">
 
                 <LinearLayout
                     android:id="@+id/llNode"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="?android:attr/selectableItemBackground"
-                    android:gravity="start|center_vertical"
+                    android:gravity="center_vertical"
                     android:orientation="vertical">
 
                     <TextView
@@ -58,17 +79,14 @@
                         style="@style/MoneroText.PosAmount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawablePadding="8dp"
-                        app:drawableStartCompat="@drawable/ic_refresh_black_24dp"
                         tools:text="monero-v9.monerujo.io" />
 
                     <TextView
-                        android:id="@+id/tvNodeAddress"
+                        android:id="@+id/tvInfo"
                         style="@style/MoneroText.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="32dp"
-                        tools:text="128.130.233.151:18089" />
+                        tools:text="Last Block: 2 minutes ago" />
                 </LinearLayout>
             </FrameLayout>
 
