--- a/app/src/main/res/values-nb/help.xml
+++ b/app/src/main/res/values-nb/help.xml
@@ -292,4 +292,25 @@
     ]]></string>
 
     <string name="help_ok">Got it!</string> <!-- Note: "Got it" as in "I understand this" -->
+
+    <string name="help_nok">Nah…</string> <!-- Note: "Nah..." as in "I don't want this" -->
+    <string name="help_getorbot">Get Orbot!</string>
+    <string name="help_tor"><![CDATA[
+        <h1>Tor</h1>
+        <p>Tor, short for The Onion Router, is free and open-source software for enabling anonymous
+        communication.</p>
+        <p>Enabling Tor will route your connection through several relays and hide your IP address
+        from the node. Keep in mind this is more private but also <b>slower</b>.</p>
+        <p>In order to use Tor with Monerujo, you\'ll need Orbot installed on your phone. After
+        installing Orbot, make sure to enable it by clicking the network icon on the wallet list
+        screen.</p>
+        <p>If you have issues connecting with Tor, try to get a new Identity in the Orbot App (icon
+        on the top right).</p>
+    ]]></string>
+
+    <string name="help_tor_enable"><![CDATA[
+        <h1>Tor Node</h1>
+        <p>This is an .onion node. In order to use it, you must enable Tor mode by touching the
+        <img src="ic_network_clearnet"/> icon near the top of the Wallet List page.</p>
+    ]]></string>
 </resources>
